# systemshock-android

./: .gitmodules  CMakeLists.txt  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/game_resources/: keybinds.txt  prefs.txt
app/src/main/java/com/shockolate/: ExceptionsHandlerApplication.kt  MainActivity.kt
app/src/main/java/com/shockolate/engine/: Engine.kt
app/src/main/java/com/shockolate/engine/activity/: EngineActivity.kt
app/src/main/java/com/shockolate/interfaces/: SettingsFragmentMvpView.kt
app/src/main/java/com/shockolate/presenter/: MainActivityPresenter.kt  SettingsFragmentPresenter.kt
app/src/main/java/com/shockolate/ui/activity/: ConfigureControlsActivity.kt  MainActivity.kt
app/src/main/java/com/shockolate/ui/controls/: SDLJoystick.kt  ScreenControlsManager.kt
app/src/main/java/com/shockolate/ui/controls/views/: JoyStick.java  MouseSDLImageButton.kt  SDLImageButton.kt  ToggleMouseSDLButton.kt  ToggleSdlImageButton.kt  TouchCamera.java
app/src/main/java/com/shockolate/ui/fragment/: MvpAppCompatFragment.java  SettingsFragment.kt
app/src/main/java/com/shockolate/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/shockolate/utils/: Consts.kt  CustomExceptionHandler.kt  Extensions.kt  Utils.kt
app/src/main/res/layout/: screen_controls.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: settings.xml
fluidsynth/: build.gradle
gl4es/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdl2-mixer/: build.gradle
